=== 1.4.0 ===
- Added Python 3.7 compatibility.

=== 1.3.0 ===
- Added support for 3DS 2.0 ALU PayOnTime payments, while removing support for any other ALU payment type.

=== 1.2.2 ===
- Deprecated PayUToken v1 and made the field no longer required in the PayUToken model.

=== 1.2.1 ===
- Fixed PayUToken not being created from IPN when receiving a v2 token.

=== 1.2.0 ===
- Added support for token payments with ALU/v3.
- As token/v1 payments are deprecated and unmaintained by PayU, support for it in this package is
  deprecated as well from now on.

=== 1.1.1 ===
- Fix signature error caused by wrong unicode length. Hopefully.

=== 1.1 ===
- Drop Django1.8 support.
- Properly fix HMAC UnicodeEncodeError. Hopefully.

=== 1.0.11 ===
- Fixed trying to convert unicode chars to ascii in some cases.

=== 1.0.0 ===
- Implement PayU tokens
- Improve project structure and development

=== 0.0.1 ===
- Initial release