@@ -9,6 +9,7 @@ pipeline:
 
 matrix:
   DJANGO_VERSION:
-    - <3.0
+    - ">=3.1,<3.2"
+    - ">=3.2,<3.3"
   PYTHON_VERSION:
     - 3.7
