@@ -15,4 +15,4 @@
 #
 
 __author__ = 'Presslabs'
-__version__ = '1.3.0'
+__version__ = '1.4.0'
