@@ -17,8 +17,6 @@ from datetime import datetime
 
 import requests
 
-from django.utils.six import text_type
-
 from payu.conf import (PAYU_MERCHANT_KEY, PAYU_MERCHANT,
                        PAYU_ALU_URL, PAYU_TOKENS_URL)
 
@@ -38,9 +36,9 @@ class BasePayment(object):
     @classmethod
     def get_signature(self, payload, merchant_key):
         sorted_payload = sorted(payload.items(), key=lambda item: item[0])
-        parameters = text_type().join(
-            [text_type('{length}{value}').format(
-                length=len(text_type(parameter[1]).encode('utf-8')), value=parameter[1]
+        parameters = "".join(
+            ['{length}{value}'.format(
+                length=len(str(parameter[1]).encode('utf-8')), value=parameter[1]
             ) for parameter in sorted_payload]
         ).encode('utf-8')
         return hmac.new(merchant_key, parameters, hashlib.md5).hexdigest()
@@ -99,7 +97,7 @@ class ALUPayment(BasePayment):
         return payload
 
     def _parse_orders(self, orders):
-        """
+        r"""
         Transform orders from list objects to PHP arrays:
             [
                 {
