@@ -1,8 +1,9 @@
 -r requirements.txt
 
-pytest==4.1.0
-pytest-django==3.4.5
-coverage==4.2
-pytest-cov==2.4.0
+pytest==6.2.3
+pytest-django==4.2.0
+coverage==5.5
+pytest-cov==2.11.1
 mock==2.0.0
-django-dynamic-fixture==2.0.0
+django-dynamic-fixture==3.1.1
+freezegun==1.1.0
