@@ -1,3 +1,3 @@
-Django>=1.11,<2.0
-pytz==2016.6.1
-requests==2.12.4
+Django>=3.1,<3.3
+pytz==2021.1
+requests==2.25.1
