@@ -1,5 +1,6 @@
 === 1.4.0 ===
-- Added Python 3.7 compatibility.
+- BREAKING: Require Python==3.7 and Django>=3.1,<3.3. Older versions are dropped.
+- BREAKING: Removed GET method from IPN view. It was probably unintended anyway.
 
 === 1.3.0 ===
 - Added support for 3DS 2.0 ALU PayOnTime payments, while removing support for any other ALU payment type.
